# AdvanceAlgorithms-3D-TrianglesRender

./: build.sh
Code/: CMakeLists.txt  Clipping.cpp  Clipping.h  Fragment.cpp  Fragment.h  Matrix.cpp  Matrix.h  ModelTransform.cpp  ModelTransform.h  Pipeline.cpp  Pipeline.h  Projection.cpp  Projection.h  ScreenMapping.cpp  ScreenMapping.h  Triangle.cpp  Triangle.h  Vertex.cpp  Vertex.h  main.cpp  matrix.h
